[package]
name = "micast-broadcaster"
version = "0.1.14"
edition = "2021"

[dependencies]
memchr = "^2.5"

gst = { package = "gstreamer", version="0.18" }
gst-base = { package = "gstreamer-base", version="0.18" }
gst-app = { package = "gstreamer-app", version="0.18" }
gst-audio = { package = "gstreamer-audio", version="0.18" }
gst-controller = { package = "gstreamer-controller", version="0.18" }
gst-net = { package = "gstreamer-net", version="0.18" }

once_cell = "1.0"
parking_lot = "0.12"

anyhow = "1.0"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.26", features = [ "serialize" ] }
chrono = { version = "0.4", features = [ "serde" ] }

reqwest = { version = "0.11"}
reqwest-middleware = { version = "0.1.6" }
reqwest-retry = { version = "0.1.5" }

async-std = {version = "1.12", features = ["attributes", "tokio1"]}
futures = "0.3"
micast-rodio = { git = "https://github.com/zweiund40GmbH/micast-rodio", branch="main", features=["gstreamer", "minimp3"]}

env_logger = "0.10"


[features]
default = ["v1_18"]
v1_20 = ["gst/v1_20", "gst-base/v1_20", "gst-audio/v1_20", "gst-controller/v1_20", "gst-app/v1_20", "gst-net/v1_20"]
v1_18 = ["gst/v1_18", "gst-base/v1_18", "gst-audio/v1_18", "gst-controller/v1_18", "gst-app/v1_18", "gst-net/v1_18"]